# openethereum

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  MAINTENANCE.md  README.md  SETUP.md  TODOs.md  build.sh  docker-build.sh  run_leopold.sh
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.run/: Build.run.xml  Test.run.xml  build (dev).run.xml  build-rust-1.59.run.xml  build-rust-1.61.run.xml  build-rust-1.62.run.xml  build-rust-1.63.run.xml  build-rust-1.66.run.xml  run (dev).run.xml  run (release).run.xml  run leopold (x86_64-unknown-linux-gnu).run.xml  run leopold (x86_64-unknown-linux-musl).run.xml  (+4 more)
crates/accounts/ethkey/: Cargo.toml
crates/accounts/ethkey/src/: brain_recover.rs
crates/accounts/ethstore/: Cargo.toml
crates/accounts/ethstore/src/: error.rs  ethkey.rs  ethstore.rs  import.rs  lib.rs  presale.rs  secret_store.rs
crates/accounts/ethstore/src/account/: cipher.rs  crypto.rs  kdf.rs  mod.rs  safe_account.rs  version.rs
crates/accounts/ethstore/src/accounts_dir/: disk.rs  memory.rs  mod.rs  vault.rs
crates/accounts/ethstore/src/json/: bytes.rs  crypto.rs  error.rs  id.rs  key_file.rs  vault_key_file.rs
crates/accounts/ethstore/tests/: api.rs
crates/accounts/ethstore/tests/util/: transient_dir.rs
crates/concensus/ethash/: Cargo.toml
crates/concensus/ethash/benches/: progpow.rs
crates/concensus/ethash/src/: cache.rs  compute.rs  lib.rs  progpow.rs  shared.rs
crates/concensus/miner/price-info/: Cargo.toml
crates/concensus/miner/price-info/src/: lib.rs
crates/db/db/: Cargo.toml
crates/db/db/src/: db.rs
crates/db/journaldb/: Cargo.toml
crates/db/journaldb/src/: archivedb.rs  earlymergedb.rs  lib.rs  overlaydb.rs  overlayrecentdb.rs  refcounteddb.rs  traits.rs
crates/db/patricia-trie-ethereum/: Cargo.toml
crates/db/patricia-trie-ethereum/src/: rlp_node_codec.rs
crates/ethcore/types/: Cargo.toml
crates/ethcore/types/src/: account_diff.rs  data_format.rs  encoded.rs  filter.rs  header.rs  log_entry.rs  snapshot_manifest.rs
crates/ethcore/types/src/transaction/: error.rs  transaction.rs  transaction_id.rs
crates/ethcore/types/src/views/: block.rs  body.rs  header.rs  typed_transaction.rs
crates/ethereum-forkid/: Cargo.toml
crates/ethjson/: Cargo.toml
crates/ethjson/src/: bytes.rs  maybe.rs  uint.rs
crates/ethjson/src/blockchain/: blockchain.rs  state.rs
crates/ethjson/src/spec/: state.rs
crates/ethjson/src/state/: test.rs
crates/ethjson/src/trie/: input.rs
crates/net/fake-fetch/: Cargo.toml
crates/net/fake-fetch/src/: lib.rs
crates/net/fetch/: Cargo.toml
crates/net/fetch/src/: client.rs  compat.rs  lib.rs
crates/net/network-devp2p/: Cargo.toml
crates/net/network-devp2p/src/: connection.rs  discovery.rs  handshake.rs  host.rs  ip_utils.rs  lib.rs  node_table.rs  service.rs  session.rs
crates/net/network-devp2p/tests/: tests.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: authcodes.rs  lib.rs
crates/rpc/src/tests/: helpers.rs  http_client.rs  rpc.rs  ws.rs
crates/rpc/src/v1/: extractors.rs  informant.rs  metadata.rs  mod.rs
crates/rpc/src/v1/helpers/: block_import.rs  deprecated.rs  eip191.rs  engine_signer.rs  errors.rs  network_settings.rs  nonce.rs  poll_manager.rs  requests.rs  secretstore.rs  signature.rs  subscribers.rs  subscription_manager.rs  work.rs
crates/rpc/src/v1/helpers/dispatch/: full.rs  mod.rs  prospective_signer.rs  signing.rs
crates/rpc/src/v1/helpers/external_signer/: mod.rs  oneshot.rs  signing_queue.rs
crates/rpc/src/v1/impls/: debug.rs  eth.rs  eth_filter.rs  eth_pubsub.rs  net.rs  parity.rs  parity_accounts.rs  parity_set.rs  personal.rs  pubsub.rs  secretstore.rs  signer.rs  signing.rs  signing_unsafe.rs  web3.rs
crates/rpc/src/v1/tests/: eth.rs  mod.rs
crates/rpc/src/v1/tests/helpers/: miner_service.rs  snapshot_service.rs  sync_provider.rs
crates/rpc/src/v1/tests/mocked/: eth.rs  eth_pubsub.rs  manage_network.rs  parity.rs  parity_accounts.rs  parity_set.rs  personal.rs  pubsub.rs  secretstore.rs  signer.rs  signing.rs  signing_unsafe.rs  traces.rs  web3.rs
crates/rpc/src/v1/traits/: eth.rs  eth_signing.rs  parity.rs  parity_set.rs  parity_signing.rs  personal.rs  signer.rs
crates/rpc/src/v1/types/: account_info.rs  block.rs  block_number.rs  call_request.rs  confirmations.rs  derivation.rs  eip191.rs  eth_types.rs  filter.rs  histogram.rs  index.rs  log.rs  provenance.rs  pubsub.rs  receipt.rs  secretstore.rs  sync.rs  trace.rs  trace_filter.rs  transaction.rs  transaction_condition.rs  transaction_request.rs
crates/runtime/io/: Cargo.toml
crates/runtime/io/src/: lib.rs  service_mio.rs  service_non_mio.rs  worker.rs
crates/runtime/runtime/: Cargo.toml
crates/runtime/runtime/src/: lib.rs
crates/util/EIP-712/: Cargo.toml
crates/util/EIP-712/src/: eip712.rs  encode.rs  error.rs  lib.rs  parser.rs
crates/util/atty-compat/: Cargo.toml
crates/util/atty-compat/src/: lib.rs
crates/util/block-cipher-trait/: Cargo.toml
crates/util/block-cipher-trait/src/: dev.rs
crates/util/cli-signer/: Cargo.toml
crates/util/cli-signer/rpc-client/: Cargo.toml
crates/util/cli-signer/rpc-client/src/: client.rs  lib.rs  signer_client.rs
crates/util/cli-signer/src/: lib.rs
crates/util/keccak-hasher/: Cargo.toml
crates/util/lock-api-compat/: Cargo.toml
crates/util/lock-api-compat/src/: lib.rs  mutex.rs  rwlock.rs
crates/util/parity-util-mem-compat/: Cargo.toml
crates/util/parity-util-mem-compat/src/: allocators.rs  lib.rs  malloc_size.rs
crates/util/stream-cipher/: Cargo.toml
crates/util/stream-cipher/src/: dev.rs
crates/util/tempdir-compat/: Cargo.toml
crates/util/tempdir-compat/src/: lib.rs
crates/util/triehash-ethereum/: Cargo.toml
crates/util/triehash-ethereum/src/: lib.rs
crates/util/version/: Cargo.toml  build.rs
crates/util/version/src/: lib.rs
crates/vm/vm/: Cargo.toml
crates/vm/vm/src/: access_list.rs  action_params.rs  error.rs  schedule.rs  tests.rs
crates/vm/wasm/: Cargo.toml
crates/vm/wasm/src/: env.rs  lib.rs  panic_payload.rs  parser.rs  runtime.rs
(+322 files in other folders)
