[package]
edition = "2015"
description = "OpenEthereum"
name = "openethereum"
# NOTE Make sure to update util/version/Cargo.toml as well
version = "3.3.6"
license = "GPL-3.0"
authors = [
	"OpenEthereum developers",
	"Parity Technologies <admin@parity.io>"
]

[dependencies]
mio = "1.0.2"     # fixed patch 0.6.23
fs-swap = "0.2.6"             # fixed patch 0.2.6
rustc-serialize  = "0.3.25"
blooms-db = { path = "crates/db/blooms-db" }
log = "0.4.22"
rustc-hex = "2.1.0"
docopt = "1.1.1"
clap = "4.5.20"
term_size = "1.0.0-beta1"
textwrap = "0.16.1" # fixed
num_cpus = "1.16.0"
number_prefix = "0.4.0" # fixed
rpassword = "7.3.1"
semver = "1.0.23"   # fixed
ansi_term = "0.12.1"
parking_lot = "0.12.3"# fixed
crossbeam-channel = "0.5.13"
regex = "1.11.0"
atty = "0.2.14"
toml = "0.8.19"
serde = "1.0.210"
serde_json = "1.0.128"
serde_derive = "1.0.210"
futures = "0.3.31"
hyper = { version = "1.5.0" }
fdlimit = "0.3.0"
ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git" }
jsonrpc-core = "18.0.0"
parity-bytes = "0.1.2"
common-types = { path = "crates/ethcore/types" }
ethcore = { path = "crates/ethcore", features = ["parity"] }
ethcore-accounts = { path = "crates/accounts", optional = true }
ethcore-blockchain = { path = "crates/ethcore/blockchain" }
ethcore-call-contract = { path = "crates/vm/call-contract"}
ethcore-db = { path = "crates/db/db" }
ethcore-io = { path = "crates/runtime/io" }
ethcore-logger = { path = "bin/oe/logger" }
ethcore-miner = { path = "crates/concensus/miner" }
ethcore-network = { path = "crates/net/network" }
ethcore-service = { path = "crates/ethcore/service" }
ethcore-sync = { path = "crates/ethcore/sync" }
ethereum-types = "0.15.1"
ethkey = { path = "crates/accounts/ethkey" }
ethstore = { path = "crates/accounts/ethstore" }
fetch = { path = "crates/net/fetch" }
node-filter = { path = "crates/net/node-filter" }
parity-crypto = { version = "0.9.0", features = [ "publickey" ] }
rlp = { version = "0.6.1" }
cli-signer= { path = "crates/util/cli-signer" }
parity-daemonize = "0.3.0"
parity-local-store = { path = "crates/concensus/miner/local-store" }
parity-runtime = { path = "crates/runtime/runtime" }
parity-rpc = { path = "crates/rpc" }
rpc-servers = { path = "crates/rpc-servers", package = "oe-rpc-servers" }
rpc-common = { path = "crates/rpc-common", package = "oe-rpc-common" }
parity-version = { path = "crates/util/version" }
parity-path = "0.1.3"
dir = { path = "crates/util/dir" }
panic_hook = { path = "crates/util/panic-hook" }
keccak-hash = "0.11.0"
migration-rocksdb = { path = "crates/db/migration-rocksdb" }
kvdb = "0.13.0"
kvdb-rocksdb = "0.19.0"
journaldb = { path = "crates/db/journaldb" }
stats = { path = "crates/util/stats" }
prometheus = "0.13.4"

[build-dependencies]
rustc_version = "0.4.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
ipnetwork = "0.20.0"# fixed minor
tempdir = "0.3"
fake-fetch = { path = "crates/net/fake-fetch" }
lazy_static = "1.5.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["winsock2", "winuser", "shellapi"] }

[features]
default = ["accounts"]
accounts = ["ethcore-accounts", "parity-rpc/accounts"]
miner-debug = ["ethcore/miner-debug"]
json-tests = ["ethcore/json-tests"]
ci-skip-tests = ["ethcore/ci-skip-tests"]
test-heavy = ["ethcore/test-heavy"]
evm-debug = ["ethcore/evm-debug"]
evm-debug-tests = ["ethcore/evm-debug-tests"]
slow-blocks = ["ethcore/slow-blocks"]
final = ["parity-version/final"]
deadlock_detection = ["parking_lot/deadlock_detection"]
secretstore = []

# to create a memory profile (requires nightly rust), use e.g.
# `heaptrack /path/to/parity <parity params>`,
# to visualize a memory profile, use `heaptrack_gui`
# or
# `valgrind --tool=massif /path/to/parity <parity params>`
# and `massif-visualizer` for visualization
memory_profiling = []

[lib]
path = "bin/oe/lib.rs"

[[bin]]
path = "bin/oe/main.rs"
name = "openethereum"

[profile.test]
lto = false
opt-level = 3 # makes tests slower to compile, but faster to run

[profile.dev]
debug = true
opt-level = 0
debug-assertions = true
overflow-checks = true
panic = 'abort'
incremental = true

[profile.release]
debug = false
lto = true

[workspace]
# This should only list projects that are not
# in the dependency tree in any other way
# (i.e. pretty much only standalone CLI tools)
members = [
	"bin/ethkey",
	"bin/ethstore",
	"bin/evmbin",
	"bin/chainspec"
]
