[package]
edition = "2015"
description = "Parity Ethereum JSON-RPC Servers (WS, HTTP, IPC)"
name = "parity-rpc"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]

[dependencies]
ansi_term = "0.12.1"
futures = "0.3.31"
log = "0.4"
order-stat = "0.1"
parking_lot = "0.12.3"
rand = "0.8.5"
rand_xorshift = "0.3.0"
rustc-hex = "2.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempdir = "0.3"
tiny-keccak = "2.0.2"
tokio-timer = "0.2.13"
transient-hashmap = "0.4"
itertools = "0.13.0"

jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ws-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"

common-types = { path = "../ethcore/types" }
ethash = { path = "../concensus/ethash" }
ethcore = { path = "../ethcore" }
ethcore-accounts = { path = "../accounts", optional = true }
ethcore-logger = { path = "../../bin/oe/logger" }
ethcore-miner = { path = "../concensus/miner" }
ethcore-network = { path = "../net/network" }
ethcore-sync = { path = "../ethcore/sync" }
ethereum-types = "0.15.1"
parity-bytes = "0.1"
parity-crypto = { version = "0.9.0", features = [ "publickey" ] }

eip-712 = { path = "../util/EIP-712" }
ethjson = { path = "../ethjson" }
ethkey = { path = "../accounts/ethkey" }
ethstore = { path = "../accounts/ethstore" }
fetch = { path = "../net/fetch" }
keccak-hash = "0.11.0"
parity-runtime = { path = "../runtime/runtime" }
parity-version = { path = "../util/version" }
rlp = { version = "0.6.1" }
stats = { path = "../util/stats" }
vm = { path = "../vm/vm" }
rpc-servers = { path = "../rpc-servers", package = "oe-rpc-servers" }
rpc-common = { path = "../rpc-common", package = "oe-rpc-common" }

[dev-dependencies]
ethcore = { path = "../ethcore", features = ["test-helpers"] }
ethcore-accounts = { path = "../accounts" }
ethcore-io = { path = "../runtime/io" }
ethcore-network = { path = "../net/network" }
fake-fetch = { path = "../net/fake-fetch" }
macros = { path = "../util/macros" }
pretty_assertions = "0.1"
txpool = { path = "../transaction-pool" }
tempdir = "0.3.7"

[features]
accounts = ["ethcore-accounts"]
cargo-clippy = []
