[package]
edition = "2015"
description = "Parity Ethereum Keys Generator"
name = "ethkey"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
edit-distance = "2.0"
parity-crypto = { version = "0.9.0", features = ["publickey"] }
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1.git" }
ethereum-types = "0.15.1"
lazy_static = "1.0"
log = "0.4"
memzero = { path = "../../../crates/util/memzero" }
parity-wordlist = "1.3"
quick-error = "2.0.1"
rand = "0.8.5"
rustc-hex = "2.1.0"
serde = "1.0"
serde_derive = "1.0"
tiny-keccak = "2.0.2"
