[package]
edition = "2015"
description = "Parity Ethereum Keys Generator"
name = "ethkey"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
edit-distance = "2.0"
parity-crypto = { version = "0.6.2", features = ["publickey"] }
log = "0.4"
parity-wordlist = "1.3"
serde = "1.0"
serde_derive = "1.0"
