[package]
edition = "2015"
description = "Parity Ethereum Key Management"
name = "ethstore"
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.4"
libc = "0.2"
rand = "0.8.5"
ethkey = { path = "../ethkey" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "2.1.0"
time = "0.3.36"
itertools = "0.13.0"
parking_lot = "0.12.3"
parity-crypto = { version = "0.9.0", features = [ "publickey"] }
ethereum-types = "0.15.1"
smallvec = "1.13.2"
parity-wordlist = "1.3"
tempdir = "0.3"
lazy_static = "1.2.0"

[dev-dependencies]
matches = "0.1"

[lib]
