[package]
edition = "2015"
description = "Parity Ethereum Key Management"
name = "ethstore"
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.4"
libc = "0.2"
rand = "0.7.3"
ethkey = { path = "../ethkey" }
serde = "1.0.219"
serde_json = "1.0.140"
serde_derive = "1.0.219"
rustc-hex = "1.0.0"
time = "0.2.27"
itertools = "0.5"
parking_lot = "0.12.4"
parity-crypto = { version = "0.6.2", features = ["publickey"] }
ethereum-types = "0.9.2"
smallvec = "0.6.14"
parity-wordlist = "1.3"
tempdir = "0.3.7"
lazy_static = "1.5.0"

[dev-dependencies]
matches = "0.1"

[lib]
