[package]
edition = "2018"
description = "OpenEthereum DB access utilities"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "ethcore-db"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
common-types = { path = "../../ethcore/types" }
ethereum-types = "0.15.1"
kvdb = "0.13.0"
kvdb-rocksdb = "0.19.0"
kvdb-memorydb = "0.13.0"
parity-util-mem = "0.12.0"
parking_lot = "0.12.3"
rlp = { version = "0.6.1" }
rlp_derive = { path = "../../util/rlp-derive" }
stats = { path = "../../util/stats" }