[package]
edition = "2021"
description = "OpenEthereum DB access utilities"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "ethcore-db"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
common-types = { path = "../../ethcore/types" }
ethereum-types = "0.10.0"
kvdb = "0.1"
kvdb-rocksdb = "0.1.3"
kvdb-memorydb = "0.1"
parity-util-mem = "0.8"
parking_lot = "0.12.3"
rlp = { version = "0.5.2" }
rlp_derive = { path = "../../util/rlp-derive" }
stats = { path = "../../util/stats" }
