[package]
edition = "2021"
description = "OpenEthereum DB access utilities"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "ethcore-db"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
common-types = { path = "../../ethcore/types" }
ethereum-types = "0.9.2"
kvdb = "0.1.1"
kvdb-rocksdb = "0.1.6"
kvdb-memorydb = "0.1.2"
parity-util-mem = "0.7"
parking_lot = "0.12.4"
rlp = { version = "0.4.6" }
rlp-derive = "0.2.0"
stats = { path = "../../util/stats" }
