[package]
edition = "2015"
name = "journaldb"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "A `HashDB` which can manage a short-term journal potentially containing many forks of mutually exclusive actions"
license = "GPL3"

[dependencies]
parity-bytes = "0.1"
ethereum-types = "0.15.1"
hash-db = "0.16.0"
keccak-hasher = { path = "../../util/keccak-hasher" }
ethcore-db = { path = "../../db/db"}
kvdb = "0.13.0"
log = "0.4"
memory-db = { path = "../memory-db" }
parity-util-mem = "0.12.0"
parking_lot = "0.12.3"
fastmap = { path = "../../util/fastmap" }
rlp = { version = "0.6.1" }

[dev-dependencies]
env_logger = "0.11.5"
keccak-hash = "0.11.0"
kvdb-memorydb = "=0.1.0"
