[package]
edition = "2015"
name = "patricia-trie-ethereum"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie (Ethereum Style)"
license = "GPL-3.0"

[dependencies]
trie-db = "0.29.1"
keccak-hasher = { version = "0.1.1", path = "../../util/keccak-hasher" }
hash-db = "0.16.0"
rlp = { version = "0.6.1" }
parity-bytes = "0.1"
ethereum-types = "0.15.1"
elastic-array = "0.11.0"

[dev-dependencies]
memory-db = "0.32.0"
keccak-hash = "0.11.0"
journaldb = { path = "../journaldb" }
