[package]
edition = "2021"
description = "Mock fetcher for testing"
name = "fake-fetch"
version = "0.0.1"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
fetch = { path = "../fetch" }
futures = "0.3"
hyper = { version = "0.14.12", features = ["http1", "http2"] }
http = "0.2"
