[package]
edition = "2015"
description = "HTTP/HTTPS fetching library"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "fetch"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
futures = "0.3.31"
hyper = "1.5.0"
hyper-rustls = "0.27.3"
http = "1.1.0"
log = "0.4"
tokio = "1.40.0"
url = "2"
bytes = "1.7.2"

[features]
default = []
