[package]
edition = "2021"
description = "HTTP/HTTPS fetching library"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "fetch"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
futures = { version = "0.3", features = ["compat"] }
futures-01 = { package = "futures", version = "0.1", optional = true }
hyper = { version = "0.14.12", features = ["server", "http1", "http2"] }
hyper-tls = "0.5"
http = "0.2"
log = "0.4"
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
url = "2"
bytes = "1.0"

[features]
default = ["compat"]
compat = ["futures-01"]
