[package]
edition = "2015"
description = "DevP2P implementation of the ethcore network library"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "ethcore-network-devp2p"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.4"
mio = "1.0.2"
bytes = "1.7.2"
rand = "0.8.5"
tiny-keccak = "2.0.2"
rust-crypto = "0.2.34"
slab = "0.4.9"
igd = "0.12.1"
libc = "0.2.7"
parking_lot = "0.12.3"
rustc-hex = "2.1.0"
ethcore-io = { path = "../../runtime/io", features = ["mio"] }
parity-bytes = "0.1"
parity-crypto = { version = "0.9.0", features = [ "publickey" ] }
ethcore-network = { path = "../network" }
ethereum-types = "0.15.1"
ethkey = { path = "../../../crates/accounts/ethkey" }
rlp = { version = "0.6.1" }
parity-path = "0.1"
ipnetwork = "0.20.0"
keccak-hash = "0.11.0"
# parity-snappy = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
error-chain = { version = "0.12.4", default-features = false }
lru-cache = "0.1"

[dev-dependencies]
env_logger = "0.11.5"
tempdir = "0.3"
assert_matches = "1.2"

[features]
default = []
