[package]
edition = "2015"
description = "Ethcore IO library"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "ethcore-io"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
fnv = "1.0"
mio = { version = "0.6.8", optional = true }
crossbeam-deque = "0.8.5"
parking_lot = "=0.12.4"
log = "0.4"
slab = "0.4"
num_cpus = "1.8"
timer = "0.2"
time = "0.2.23"
tokio = "0.1"
futures = "0.1"
