[package]
edition = "2021"
description = "OpenEthereum Runtime"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "parity-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
futures = { version = "0.3", features = ["compat"] }
futures-util = "0.3"
futures01 = { package = "futures", version = "0.1.31" }
tokio = { version = "1.46.1", features = [
	"rt",
	"rt-multi-thread",
	"macros",
	"time",
	"sync",
] }
