[package]
edition = "2018"
name = "eip-712"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/openethereum/openethereum"
documentation = "https://docs.rs/eip-712"
readme = "README.md"
description = "eip-712 encoding"
keywords = ["eip-712", "eip712", "eip"]
license = "GPL-3.0"

[dependencies]
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
ethabi = "18.0.0"
keccak-hash = "0.11.0"
ethereum-types = "0.15.1"
logos = "0.14.2"
failure = "0.1.7"
itertools = "0.13.0"
lazy_static = "1.1"
regex = "1.0"
validator = "0.18.1"
validator_derive = "0.18.2"
rustc-hex = "2.0"
indexmap = "2.6.0"
