[package]
edition = "2021"
name = "eip-712"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/openethereum/openethereum"
documentation = "https://docs.rs/eip-712"
readme = "README.md"
description = "eip-712 encoding"
keywords = ["eip-712", "eip712", "eip"]
license = "GPL-3.0"

[dependencies]
serde_derive = "1.0.219"
serde = "1.0.219"
serde_json = "1.0.140"
ethabi = "12.0.0"
keccak-hash = "0.5.1"
ethereum-types = "0.9.2"
logos = "0.12.0"
itertools = "0.7"
lazy_static = "1.5.0"
regex = "1.11.1"
validator = "0.8"
validator_derive = "0.8"
rustc-hex = "2.1.0"
indexmap = "1.0.2"
