# This crate was vendored because the used version was yanked from crates.io
# Original: https://crates.io/crates/block-cipher-trait/0.6.2
# Commit: 727a18f143cda9e0da7fc925722d77ae254d201a

[package]
edition = "2021"
name = "block-cipher-trait"
version = "0.6.2"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Traits for description of block ciphers"
documentation = "https://docs.rs/block-cipher-trait"
repository = "https://github.com/RustCrypto/traits"
keywords = ["crypto", "block-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
generic-array = "0.12"
blobby = { version = "0.1", optional = true }

[features]
std = []
dev = ["blobby"]

[badges]
travis-ci = { repository = "RustCrypto/traits" }

[package.metadata.docs.rs]
features = ["std"]
