[package]
edition = "2015"
description = "OpenEthereum CLI Signer Tool"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "cli-signer"
version = "1.4.0"
authors = ["Parity <admin@parity.io>"]

[dependencies]
ethereum-types = "0.15.1"
futures = "0.3.31"
rpassword = "7.3.1"
parity-rpc = { path = "../../rpc" }
parity-rpc-client = { path = "rpc-client" }
