[package]
edition = "2018"
description = "OpenEthereum CLI Signer Tool"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "cli-signer"
version = "1.4.0"
authors = ["Parity <admin@parity.io>"]

[dependencies]
ethereum-types = "0.9.2"
futures = { version = "0.3", features = ["executor"] }
rpassword = "1.0.2"
parity-rpc = { path = "../../rpc" }
parity-rpc-client = { path = "rpc-client" }
