[package]
edition = "2015"
name = "keccak-hasher"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Keccak-256 implementation of the Hasher trait"
license = "GPL-3.0"

[dependencies]
ethereum-types = "0.15.1"
tiny-keccak = "2.0.2"
hash-db = "0.16.0"
plain_hasher = "0.2"
