[package]
name = "parity-util-mem"
# Vendored fork of parity-util-mem 0.7.0 with lru dependency upgraded:
#   lru 0.5.3 → 0.7.8 (fixes RUSTSEC lru vulnerabilities, Dependabot #12/#18)
# The `lru::LruCache<K, V, S>` API used here (.iter(), .len()) is identical in
# both lru 0.5.x and 0.7.x — no source-level changes required.
# Registered via [patch.crates-io] in root Cargo.toml so Cargo replaces the
# crates.io version with this patched local copy.
# Remove this shim when Phase 3 (parity-util-mem 0.11.0) is complete.
version = "0.7.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collection of memory related utilities (lru-patched fork)"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/openethereum/openethereum"

# Prevent multiple versions from being linked into the same program.
links = "parity-util-mem-ban-duplicates"
# `links` requires a build script to be present:
# https://doc.rust-lang.org/cargo/reference/build-scripts.html#the-links-manifest-key
build = "build.rs"

[dependencies]
cfg-if = "0.1.10"
dlmalloc = { version = "0.1.3", features = ["global"], optional = true }
wee_alloc = { version = "0.4.5", optional = true }
# Upgraded from lru 0.5.3 → 0.7.8 to fix RUSTSEC lru vulnerabilities.
# The MallocSizeOf impl in malloc_size.rs uses only .iter() and .len(),
# which have identical signatures in lru 0.5.x and 0.7.x.
lru = { version = "0.7.8", optional = true }
hashbrown = { version = "0.8", optional = true }
mimalloc = { version = "0.1.18", optional = true }
libmimalloc-sys = { version = "0.1.14", optional = true }
parity-util-mem-derive = { version = "0.1" }
impl-trait-for-tuples = "0.1.3"

smallvec = { version = "1.0.0", optional = true }
ethereum-types = { version = "0.9.0", optional = true }
parking_lot = { version = "0.10.0", optional = true }
primitive-types = { version = "0.7", default-features = false, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["heapapi"] }

[target.'cfg(not(target_os = "windows"))'.dependencies.jemallocator]
version = "0.3.2"
optional = true

[features]
default = ["std", "ethereum-impls", "lru", "hashbrown", "smallvec", "primitive-types"]
std = ["parking_lot"]
dlmalloc-global = ["dlmalloc", "estimate-heapsize"]
weealloc-global = ["wee_alloc", "estimate-heapsize"]
jemalloc-global = ["jemallocator"]
mimalloc-global = ["mimalloc", "libmimalloc-sys"]
ethereum-impls = ["ethereum-types", "primitive-types"]
estimate-heapsize = []

