[package]
edition = "2015"
name = "triehash-ethereum"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Trie-root helpers, ethereum style"
license = "GPL-3.0"

[dependencies]
triehash = { version = "0.8.4" }
ethereum-types = "0.15.1"
keccak-hasher = { path = "../keccak-hasher" }
