[package]
edition = "2021"
name = "parity-version"
# NOTE: this value is used for OpenEthereum version string (via env CARGO_PKG_VERSION)
version = "3.5.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"

[package.metadata]

[dependencies]
parity-bytes = "0.1.2"
rlp = { version = "0.5.2" }
target_info = "0.1"

[build-dependencies]
vergen = "1.1.1"
rustc_version = "0.2"
toml = "0.9.2"

[features]
final = []
