[package]
edition = "2015"
description = "Virtual Machines (VM) Support Library"
name = "vm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
parity-bytes = "0.1"
ethereum-types = "0.10.0"
patricia-trie-ethereum = { path = "../../db/patricia-trie-ethereum" }
ethjson = { path = "../../ethjson" }
rlp = { version = "0.5.2" }
keccak-hash = "0.6.0"
