[package]
edition = "2015"
description = "WASM Interpreter"
name = "wasm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
byteorder = "1.0"
ethereum-types = "0.15.1"
log = "0.4"
parity-wasm = "0.45.0"
libc = "0.2"
pwasm-utils = "0.19.0"
vm = { path = "../vm" }
wasmi = "0.38.0"

[dev-dependencies]
env_logger = "0.11.5"
